@@ -1,0 +1,42 @@
+<printer id="printer/Epson-Stylus_C50">
+  <make>Epson</make>
+  <model>Stylus C50</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>1440</x>
+        <y>720</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>gimp-print</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    
+    Cheap 4-ink home printer with a medium resolution (1440x720 dpi),
+    but faster than the Stylus C42 printers and with 4 pl ink 
+    drops.&lt;p&gt;
+
+    Should work with the GIMP-Print driver for the Epson Stylus C42
+    printers, but probably with limited quality in the highest
+    resolution.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
