@@ -1,10 +1,14 @@
+2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/Epson-Stylus_C50.xml: Added Epson Stylus C50.
+
 2003-01-28  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* COPYING: Added file containing the GPL.
 
 2003-01-27  Till Kamppeter <till.kamppeter@gmx.net>
 
-	* db/source/driver/Epson-Stylus_CX?200.xml: Raised rating from
+	* db/source/printer/Epson-Stylus_CX?200.xml: Raised rating from
 	  "Mostly" to "Perfectly". Both scanning and printing are fully
 	  supported.
 
